// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DG BUDG CSV transformer Produces correct JSON output structure 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "3562000",
      "value": 3562000,
    },
    "funding_area": Array [
      "Research & innovation",
      "Investment for growth",
      "Transport",
    ],
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "",
  "coordinators": Array [
    Object {
      "address": "",
      "country": "",
      "email": "",
      "name": "Eva Maria Plunger (VERBUND AG)",
      "phone": "",
      "region": "",
      "type": "",
      "website": "",
    },
  ],
  "cover_image": "https://ec.europa.eu/budget/euprojects/sites/euprojects/files/at_cegc_985x270_0.jpg",
  "description": "<p>Under the EU-funded Central European Green Corridors project, 115 fast-charging stations for electric cars have opened in Germany, Austria, Slovenia, Slovakia and Croatia – allowing cross-border electromobility with your e-car between Munich and Zagreb. Further network expansion, offers and services for customers and energy supply solutions also drive the project’s roll-out of electric transport. Partners include public sector bodies and private companies.</p>",
  "ec_priorities": Array [
    "Jobs, Growth and Investment",
  ],
  "partners": Array [
    Object {
      "address": "",
      "country": "",
      "name": "Bayern Innovativ",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " BMW",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " Nissan",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " Renault",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " Volkswagen",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " Republic of Slovenia",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " ZSE",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " Schrack Technik",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " GreenWay",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " City of Zagreb",
      "region": "",
      "type": "",
      "website": "",
    },
    Object {
      "address": "",
      "country": "",
      "name": " SMATRICS",
      "region": "",
      "type": "",
      "website": "",
    },
  ],
  "programme_name": "Connecting Europe Facility",
  "project_id": "8155",
  "project_locations": Array [
    Object {
      "address": "",
      "country_code": "AT",
      "location": Object {
        "coordinates": Array [
          16.367315,
          48.211312,
        ],
        "type": "Point",
      },
      "nuts2": "",
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "country_code": "HR",
      "location": Object {
        "coordinates": Array [
          16.017459,
          45.803508,
        ],
        "type": "Point",
      },
      "nuts2": "",
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "country_code": "DE",
      "location": Object {
        "coordinates": Array [
          11.10347,
          49.449922,
        ],
        "type": "Point",
      },
      "nuts2": "",
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "country_code": "SK",
      "location": Object {
        "coordinates": Array [
          17.12426,
          48.143047,
        ],
        "type": "Point",
      },
      "nuts2": "",
      "postal_code": "",
      "region": "",
      "town": "",
    },
    Object {
      "address": "",
      "country_code": "SI",
      "location": Object {
        "coordinates": Array [
          14.501456,
          46.048183,
        ],
        "type": "Point",
      },
      "nuts2": "",
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "http://www.cegc-project.eu/",
  "related_links": Array [
    Object {
      "label": "INEA",
      "url": "https://ec.europa.eu/inea/en/ten-t/ten-t-projects/projects-by-country/multi-country/2013-eu-92069-s",
    },
    Object {
      "label": "InvestEU",
      "url": "https://europa.eu/investeu/projects/central-european-green-corridors_en",
    },
  ],
  "results": Object {
    "available": "",
    "result": "Installation and operation of 115 fast-charging stations in 5 European countries,Development and implementation of electromobility and cross-border services for e-car users,Strategic planning for a European fast-charging network.Since the implementation of the Central European Green Corridors project, the European fast-charging network for electric vehicles has continued to grow. An additional 200 fast-charging stations – 180 in Italy and 20 in Austria – are developed. The charging networks in the various countries are compatible with each other. This gives even more citizens the chance to take advantage of cross-border electromobility.",
  },
  "status": "",
  "sub_programme_name": "",
  "success_story": "",
  "themes": Array [],
  "timeframe": Object {
    "from": "2013-12-31T23:00:00.000Z",
    "to": "2014-12-31T23:00:00.000Z",
  },
  "title": "Central European Green Corridors",
  "type": Array [],
}
`;

exports[`DG BUDG CSV transformer Project location information is correctly mapped 1`] = `
Object {
  "address": "",
  "country_code": "AT",
  "location": Object {
    "coordinates": Array [
      16.367315,
      48.211312,
    ],
    "type": "Point",
  },
  "nuts2": "",
  "postal_code": "",
  "region": "",
  "town": "",
}
`;

exports[`DG BUDG transformer handling incomplete or inconsistent data Certain fields should always be present after transformation 1`] = `
Object {
  "action": "",
  "budget": Object {
    "eu_contrib": Object {
      "currency": "EUR",
      "raw": "",
      "value": NaN,
    },
    "funding_area": Array [],
    "other_contrib": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "private_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "public_fund": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
    "total_cost": Object {
      "currency": "",
      "raw": "",
      "value": 0,
    },
  },
  "call_year": "",
  "coordinators": Array [
    Object {
      "address": "",
      "country": "",
      "email": "",
      "name": "",
      "phone": "",
      "region": "",
      "type": "",
      "website": "",
    },
  ],
  "cover_image": "",
  "description": "",
  "ec_priorities": Array [
    "",
  ],
  "partners": Array [
    Object {
      "address": "",
      "country": "",
      "name": "",
      "region": "",
      "type": "",
      "website": "",
    },
  ],
  "programme_name": "",
  "project_id": "",
  "project_locations": Array [
    Object {
      "address": "",
      "country_code": "",
      "location": Object {
        "coordinates": Array [
          23.40014509,
          42.73806663,
        ],
        "type": "Point",
      },
      "nuts2": "",
      "postal_code": "",
      "region": "",
      "town": "",
    },
  ],
  "project_website": "",
  "related_links": Array [
    Object {
      "label": "",
      "url": "",
    },
  ],
  "results": Object {
    "available": "",
    "result": "",
  },
  "status": "",
  "sub_programme_name": "",
  "success_story": "",
  "themes": Array [],
  "timeframe": Object {
    "from": "2013-12-31T23:00:00.000Z",
    "to": "2014-12-31T23:00:00.000Z",
  },
  "title": "Bulgaria’s capital expands metro network",
  "type": Array [],
}
`;
